# Paradigmas-TP2

./: README.md
Ej_1/: CMakeLists.txt
Ej_1/examples/: main.cpp
Ej_1/headers/: Pokedex.hpp  Pokemon.hpp  PokemonInfo.hpp  Poxedex.hpp
Ej_1/srcs/: Pokedex.cpp  Pokemon.cpp  PokemonInfo.cpp
Ej_2/: CMakeLists.txt
Ej_2/examples/: main.cpp
Ej_2/headers/: Drones.hpp
Ej_2/srcs/: Drones.cpp  main.cpp
Ej_3/: CMakeLists.txt  main.cpp
